--- a/demos/smart-retail/05.working_in_mlflow.ipynb
+++ b/demos/smart-retail/05.working_in_mlflow.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c129f625-a3e9-4b4b-a95e-ee05fbe6ba0e",
    "metadata": {
     "tags": []
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "150f8bf7-ed2c-4c87-934c-9c79e6a63a93",
    "metadata": {
     "papermill": {
@@ -121,7 +121,20 @@
      "imports"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-07 22:45:28.155929: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-05-07 22:45:28.157849: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-07 22:45:28.205418: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-07 22:45:28.206326: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-07 22:45:29.064179: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "from mlflow.tracking.client import MlflowClient\n",
@@ -135,12 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7806e004-2439-4f4a-b4dc-05561777a1c0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token successfully refreshed.\n"
+     ]
+    }
+   ],
    "source": [
     "%update_token"
    ]
@@ -201,7 +222,7 @@
     "tags": []
    },
    "source": [
-    "6. Click on the Run Name to explore it further. `retail-demo-...`\n",
+    "6. Click on the Run Name to explore it further. `produce-detection-...`\n",
     "\n",
     "In this pane, we can see the **parameters** we set up for this model, as well as the **metrics**, all of the **artifacts** associated with run (including the model file and data) and the **Full Path** to the model, which we can call to access the model from this specific run. \n",
     "\n",
@@ -261,12 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "269889a0-f6ca-4c5f-a965-61e5f57ac528",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last active run ID for experiment 'retail-experiment': dd60331998ed437990a6e2bf0accf753\n"
+     ]
+    }
+   ],
    "source": [
     "# Search for runs in the specified experiment, ordering by start time in descending order\n",
     "runs = mlflow.search_runs(experiment_ids=[mlflow.get_experiment_by_name(experiment_name).experiment_id],\n",
@@ -296,10 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "85020498-9b64-48eb-9e23-070631b954f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'produce-detection' already exists. Creating a new version of this model...\n",
+      "2024/05/07 22:46:10 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: produce-detection, version 1\n",
+      "Created version '1' of model 'produce-detection'.\n"
+     ]
+    }
+   ],
    "source": [
     "# set parameters model_uri and model details and register model in mlflow\n",
     "model_uri = \"runs:/{run_id}/{artifact_path}\".format(run_id=last_run_id, artifact_path=artifact_path)\n",
@@ -313,25 +352,48 @@
     "tags": []
    },
    "source": [
-    "Then, we're going to make a new **Version** of our model. You will usually do this after you run the same model, but perhaps with different \n",
+    "Then, we're going to make a new **Version** of our model. You will usually do this after you run the same model, but perhaps with different parameters. \n",
     "\n",
-    "and differentiate it by giving it a Description. We can change many variables about a model between versions. ##FINISH THIS Confirm the model has been successfully registered and **update** it by giving it a description."
+    "We can differentiate between models it by giving them a different **Description** and/or specifying a **Version** number."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f1179e0c-702d-479d-bb59-58ddc6cbaf1f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'produce-detection' already exists. Creating a new version of this model...\n",
+      "2024/05/07 22:46:24 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: produce-detection, version 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model status: READY\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '2' of model 'produce-detection'.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a second Version of the model\n",
     "model_uri = \"runs:/{run_id}/{artifact_path}\".format(run_id=last_run_id, artifact_path=artifact_path)\n",
     "model_details = mlflow.register_model(model_uri=model_uri, name=model_name)\n",
     "\n",
-    "# Update the second model with a description.\n",
+    "# Update the second model with a description and a Version number.\n",
     "client = MlflowClient()\n",
     "\n",
     "client.update_model_version(\n",
@@ -376,12 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7908bcd3-b72c-4fab-a2f1-8e289f343bce",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: produce-detection, version: 2 has been moved to Production\n"
+     ]
+    }
+   ],
    "source": [
     "# create an instance of the MlflowClient\n",
     "client = MlflowClient()\n",
@@ -402,17 +472,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c2b382-447f-4391-be7d-bbc483f0f049",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>To Do:</b> Write steps to check the results of this in MLflow.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1885b533-b007-4832-a79c-d3904b63cd73",
    "metadata": {
     "tags": []
@@ -423,12 +482,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "75387be9-09e5-420d-bd12-f53b4c28c8fe",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: produce-detection, version: 1 has been moved to Archived\n"
+     ]
+    }
+   ],
    "source": [
     "# Transition model versions to a different stage if their current stage is not \"production\"\n",
     "model_versions = client.search_model_versions(\"\")\n",
@@ -493,24 +560,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "137ce3ea-90e1-430d-84a8-e59bb3577cda",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token successfully refreshed.\n"
+     ]
+    }
+   ],
    "source": [
     "%update_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8bc99af2-5941-49d0-83b7-a3ccbada1d3f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58ef41159cb5431996446094c5bb2961",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/05/07 22:47:58 INFO mlflow.store.artifact.artifact_repo: The progress bar can be disabled by setting the environment variable MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR to false\n",
+      "/opt/conda/lib/python3.11/site-packages/keras/src/backend.py:452: UserWarning: `tf.keras.backend.set_learning_phase` is deprecated and will be removed after 2020-10-11. To update it, simply pass a True/False value to the `training` argument of the `__call__` method of your layer or model.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the source URI or location of the model version\n",
     "logged_model = latest_version.source\n",
@@ -531,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "06268df6-d14a-4659-bec4-14a3f0fea55a",
    "metadata": {
     "tags": []
@@ -556,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bd7a5672-c828-455f-bbbb-fdf8f0f8ad6e",
    "metadata": {
     "papermill": {
@@ -599,12 +698,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e9c43c00-f0a0-4640-94f6-6760fb7fcdd0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 893ms/step\n",
+      "The model predicts: orange\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the path for our image, be it a web URL or a local file\n",
     "online_url = \"\"\n",
