--- a/demos/smart-retail/06.serve_model_kserve.ipynb
+++ b/demos/smart-retail/06.serve_model_kserve.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c129f625-a3e9-4b4b-a95e-ee05fbe6ba0e",
    "metadata": {
     "tags": []
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "150f8bf7-ed2c-4c87-934c-9c79e6a63a93",
    "metadata": {
     "papermill": {
@@ -215,18 +215,31 @@
      "imports"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-07 23:10:49.039661: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-05-07 23:10:49.041733: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-07 23:10:49.083908: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-07 23:10:49.084681: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-07 23:10:49.889537: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from kubernetes import client \n",
     "from kubernetes.client import V1EnvVar\n",
     "from kubernetes.client.models import V1ObjectMeta\n",
-    "from KServe import KServeClient\n",
-    "from KServe import constants\n",
-    "from KServe import utils\n",
-    "from KServe import V1beta1InferenceService\n",
-    "from KServe import V1beta1InferenceServiceSpec\n",
-    "from KServe import V1beta1PredictorSpec\n",
-    "from KServe import V1beta1TFServingSpec\n",
+    "from kserve import KServeClient\n",
+    "from kserve import constants\n",
+    "from kserve import utils\n",
+    "from kserve import V1beta1InferenceService\n",
+    "from kserve import V1beta1InferenceServiceSpec\n",
+    "from kserve import V1beta1PredictorSpec\n",
+    "from kserve import V1beta1TFServingSpec\n",
     "import urllib3\n",
     "import mlflow\n",
     "import requests\n",
@@ -277,24 +290,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "879fc0fa-91f8-4f05-abb3-e43c55a2e9bb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token successfully refreshed.\n"
+     ]
+    }
+   ],
    "source": [
     "%update_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eaad2cc0-5394-47cb-9f66-a748090a2049",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Storage Path in S3 (as shown in MLflow): s3://mlflow/1/dd60331998ed437990a6e2bf0accf753/artifacts/tf_serving_model\n"
+     ]
+    }
+   ],
    "source": [
     "# create an instance of the MlflowClient\n",
     "client = mlflow.tracking.MlflowClient()\n",
@@ -335,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39c184d0-e715-4266-9e0d-974aa86d66ea",
    "metadata": {
     "tags": []
@@ -344,16 +373,16 @@
    "source": [
     "# Set paramentes\n",
     "isvc_name = experiment_name\n",
-    "secret_name = 's3-proxy-KServe-secret'\n",
-    "sa_name = 's3-proxy-KServe-sa'\n",
+    "secret_name = 's3-proxy-kserve-secret'\n",
+    "sa_name = 's3-proxy-kserve-sa'\n",
     "\n",
     "#Set name of YAML file\n",
-    "yaml_name = './model-KServe.yaml'"
+    "yaml_name = './model-kserve.yaml'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c6ffa909-99c2-461f-99d7-ce26bbe4ed58",
    "metadata": {
     "tags": []
@@ -368,11 +397,11 @@
     "metadata:\n",
     "  name: \"{secret_name}\"\n",
     "  annotations:\n",
-    "    serving.KServe.io/s3-cabundle: \"\"\n",
-    "    serving.KServe.io/s3-endpoint: \"local-s3-service.ezdata-system.svc.cluster.local:30000/\"\n",
-    "    serving.KServe.io/s3-useanoncredential: \"false\"\n",
-    "    serving.KServe.io/s3-usehttps: \"0\"\n",
-    "    serving.KServe.io/s3-verifyssl: \"0\"\n",
+    "    serving.kserve.io/s3-cabundle: \"\"\n",
+    "    serving.kserve.io/s3-endpoint: \"local-s3-service.ezdata-system.svc.cluster.local:30000/\"\n",
+    "    serving.kserve.io/s3-useanoncredential: \"false\"\n",
+    "    serving.kserve.io/s3-usehttps: \"0\"\n",
+    "    serving.kserve.io/s3-verifyssl: \"0\"\n",
     "stringData:\n",
     "  AWS_ACCESS_KEY_ID: \"{os.environ['AUTH_TOKEN']}\"\n",
     "  AWS_SECRET_ACCESS_KEY: \"s3\"\n",
@@ -387,7 +416,7 @@
     "  - name: \"access-token\"\n",
     "\n",
     "---\n",
-    "apiVersion: serving.KServe.io/v1beta1\n",
+    "apiVersion: serving.kserve.io/v1beta1\n",
     "kind: InferenceService\n",
     "metadata:\n",
     "  name: \"{isvc_name}\"\n",
@@ -414,12 +443,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "57361cd2-819f-4901-a800-ea72c8a30ed1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.11/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  pid, fd = os.forkpty()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "secret/s3-proxy-kserve-secret created\n",
+      "serviceaccount/s3-proxy-kserve-sa created\n",
+      "inferenceservice.serving.kserve.io/retail-experiment created\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the container\n",
     "!kubectl apply -f {yaml_name}"
@@ -437,12 +484,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ce17d8fd-2f82-43ee-825e-2c33cfcdee9f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME               READY      PREV    LATEST  URL\n",
+      "retail-experiment  True          0       100  https://retail-experiment-predictor.admin-9dbd466f.gpu-dev-hpe-ezua.com\n",
+      "\n",
+      "InferenceService retail-experiment is ready.\n"
+     ]
+    }
+   ],
    "source": [
     "# Wait until the ISvc is ready\n",
     "KServe_client = KServeClient()\n",
@@ -485,7 +543,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./images/exercise6/KServe1.png\" alt=\"Drawing\" style=\"width: 90%;\"/>"
+    "<img src=\"./images/exercise6/kserve1.png\" alt=\"Drawing\" style=\"width: 90%;\"/>"
    ]
   },
   {
@@ -510,7 +568,7 @@
     "tags": []
    },
    "source": [
-    "<img src=\"./images/exercise6/KServe2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>"
+    "<img src=\"./images/exercise6/kserve2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>"
    ]
   },
   {
@@ -538,14 +596,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "7a8ba023-4a1a-4ece-896b-efe47cb76f33",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "internal_url = \"\" #paste the URL internal endpoint for your model here"
+    "internal_url = \"http://retail-experiment-predictor.admin-9dbd466f.svc.cluster.local\" #paste the URL internal endpoint for your model here"
    ]
   },
   {
@@ -589,24 +647,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4a37d6bb-deec-4cac-907d-8942c107524b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token successfully refreshed.\n"
+     ]
+    }
+   ],
    "source": [
     "%update_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7298806c-5d0f-4746-8267-67e7791c3e0b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving URL: http://retail-experiment-predictor.admin-9dbd466f.svc.cluster.local/v1/models/retail-experiment:predict\n"
+     ]
+    }
+   ],
    "source": [
     "# Build the Serving URL\n",
     "serving_url = internal_url + \"/v1/models/\" + isvc_name + \":predict\"\n",
@@ -626,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a33dccaa-6807-420b-a661-5cb19418255a",
    "metadata": {
     "tags": [
@@ -685,14 +759,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "240cfb5f-485f-4512-81a7-5039f5e8c45c",
    "metadata": {
     "tags": [
      "skip"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'PIL.Image.Image'>\n",
+      "(224, 224, 3)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(224, 224, 3)\n",
+      "<class 'numpy.ndarray'>\n",
+      "(1, 224, 224, 3)\n",
+      "<class 'numpy.ndarray'>\n",
+      "<Response [200]>\n",
+      "Request successfully made.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define your labels\n",
     "labels = {'apple': 0, 'banana': 1, 'carrot': 2, 'cucumber': 3, 'lemon': 4, 'orange': 5}\n",
@@ -730,14 +820,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f69f837d-ab95-4b9a-bdd6-ead2c9684f15",
    "metadata": {
     "tags": [
      "skip"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw Response Content:\n",
+      "{\n",
+      "    \"predictions\": [[0.0366754569, 0.00034834235, 5.70802731e-05, 1.49144107e-05, 0.0618892163, 0.901015]\n",
+      "    ]\n",
+      "}\n",
+      "\n",
+      "Translated Predictions:\n",
+      "- 0: \t3.67%\n",
+      "- 1: \t0.03%\n",
+      "- 2: \t0.01%\n",
+      "- 3: \t0.0%\n",
+      "- 4: \t6.19%\n",
+      "- 5: \t90.1%\n",
+      "\n",
+      "Predicted class label: orange with 90.1 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the raw response content\n",
     "print(\"Raw Response Content:\")\n",
@@ -792,14 +904,6 @@
     "\n",
     "In the next exercise, we will leverage this endpoint to make **real-time** detections of produce within a custom self-checkout application!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d249326-03cf-4b88-8d8e-9a748bf30465",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
